--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,17 @@ li {
 
 }
 
+.img-perfil-licht {
+
+    width: 30%;
+    height: 10%;
+    border: solid 1px gray;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    object-fit: cover;
+
+}
+
 .texto-perfil {
 
     padding: 10px;
@@ -193,6 +204,12 @@ li {
         font-size: 18px;
     }
 
+    .img-perfil-licht {
+
+        width: 30vw;
+
+    }
+
 
 
 
@@ -227,6 +244,13 @@ li {
 
 
     }
+
+    .img-perfil-licht {
+
+        width: 30vw;
+
+    }
+
 
 
 
