--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,10 @@ a:hover {
 }
 
 
-.contenedor-info {
+.contenedor-info-perfil {
 
-    margin: 15px;
+   
+   
 }
 
 ul {
@@ -192,6 +193,14 @@ li {
 
 }
 
+
+
+.texto-perfil-pefil {
+
+    padding: 30px;
+
+
+}
 .contenedor-button {
 
     display: flex;
@@ -235,6 +244,7 @@ li {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     max-width: 500px;
     margin: 40px auto;
+    font-size: medium;
     border: 1px solid var(--color-negro);
 
 }
@@ -281,7 +291,35 @@ li {
 }
 
 
- 
+/* VALIDACIONES FORM , JS */
+
+.es-valido {
+
+    background-color: #198754;
+    border: 2px #198754;
+  }
+  
+  .es-invalido {
+    background-color: #F8D7DA;
+    border: 2px #842029;
+  }
+  
+  #errores {
+  
+    color: #842029;
+    background-color: #F8D7DA;
+    font-size: large;
+    text-align: center;
+    border-radius: 10px;
+    list-style: none;
+    
+    
+  }
+
+  #errores li{
+    display: block;
+  }
+  
 
 
 
@@ -310,6 +348,16 @@ li {
         width: 30vw;
 
     }
+
+    .contenedor-info-perfil {
+
+        margin: 15px;
+        padding: 30px;
+
+   
+   
+    }
+    
 
 
 
