--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ html {
     font-size: 15px;
 }
 
+header{
+
+    background-image: url(../img/fondo.jpg);
+}
+
 body {
     margin: 0;
 }
@@ -23,6 +28,7 @@ body {
     margin: 10px;
     display: flex;
     justify-content: space-around;
+    
 
 }
 
@@ -34,6 +40,7 @@ body {
 .logo-2 {
 
     width: 25vw;
+    width: 22vw;
 }
 
 .nav-bar a {
