--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@ li {
     text-decoration: none;
     font-size: 16px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .button-linkedin:hover {
@@ -265,9 +266,37 @@ li {
 }
 
 
-.grafico_año{
+.grafico_año {
 
     width: 100vw;
+}
+
+.button-estaciones {
+    display: inline-block;
+    background-color: #0077B5;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+
+}
+
+.button-estaciones:hover {
+    transform: scale(1.3);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+
+
+.center-button{
+
+    text-align: center;
 }
 
 
@@ -376,10 +405,10 @@ li {
     .nav-bar a:hover {
         transform: scale(1.1);
         color: var(--color-negro);
-    
-    
+
+
     }
-    
+
 
 
 
@@ -424,7 +453,7 @@ li {
 
     }
 
-   
+
 
     .burger-menu {
         display: none;
@@ -465,10 +494,10 @@ li {
     .nav-bar a:hover {
         transform: scale(1.1);
         color: var(--color-negro);
-    
-    
+
+
     }
-    
+
 
     .img-perfil-licht {
 
@@ -494,7 +523,7 @@ li {
 
     }
 
-   
+
 
     .burger-menu {
         display: none;
