--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 html {
     background-color: var(--color-blanco);
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
 }
 
