--- a/pages/busqueda/index.css
+++ b/pages/busqueda/index.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    font-size: 15px;
 }
 
 body{
@@ -13,8 +16,7 @@ body{
 
 
 section{
-    width: 100vw;
-    height: 100vh;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,6 +30,7 @@ input{
     outline: none;
     border: 5px solid #CCD1E4;
     font-weight: 600;
+    margin-top: 20px;
 }
 
 #listaArticulos{
@@ -37,6 +40,7 @@ input{
     font-weight: 600;
     color: #ffffff;
     text-align: center;
+    cursor: pointer;
 }
 li{
     margin: 5px 0;
@@ -45,3 +49,74 @@ li{
 .filtro{
     display: none;
 }
+
+.nav-bar {
+    text-align: center;
+    margin-top: 15px;
+    background-color: #E6F4F1;
+    border-bottom: 3px solid #CCD1E4;
+
+}
+
+.nav-bar a {
+    text-decoration: none;
+    color: var(--color-negro);
+    margin-left: 5vw;
+    margin-right: 5vw;
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.nav-bar li {
+
+    display: inline;
+}
+
+
+@media (min-width: 585px) {
+
+
+    .nav-bar a {
+
+        display: inline;
+        transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+        color: var(--color-blanco);
+
+
+    }
+
+    .nav-bar a:hover {
+        transform: scale(1.1);
+        color: var(--color-negro);
+
+
+    }
+
+
+
+    }
+
+
+    @media (min-width: 1050px){
+
+        .nav-bar a {
+
+            display: inline;
+            transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+            color: var(--color-blanco);
+    
+    
+        }
+    
+        .nav-bar a:hover {
+            transform: scale(1.1);
+            color: var(--color-negro);
+    
+    
+        }
+
+
+
+    }
