--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,14 @@ li {
     display: block;
 }
 
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease;
+  }
+  
+  .fade-in-active {
+    opacity: 1;
+  }
 
 
 
