--- a/pages/busqueda/styleBusqueda.css
+++ b/pages/busqueda/styleBusqueda.css
@@ -75,6 +75,11 @@ li {
     display: inline;
 }
 
+img{
+    width: 90vw;
+}
+
+
 
 @media (min-width: 585px) {
 
@@ -128,6 +133,7 @@ li {
         width: 50vw
     }
 
+   
 
 
 
