--- a/css/style.css
+++ b/css/style.css
@@ -418,6 +418,13 @@ li {
     margin:10px
 }
 
+.grafico-año1{
+
+    width: 80vw;
+
+
+}
+
 .fade-in {
    
     .grafico-año1 {
@@ -643,6 +650,7 @@ li {
 
 
     }
+    
 
 
 
