--- a/pages/busqueda/styleBusqueda.css
+++ b/pages/busqueda/styleBusqueda.css
@@ -84,6 +84,8 @@ img{
     width: 90%;
     justify-content: space-around;
     align-items: center;
+    flex-direction: column;
+    margin-top: 1rem;
 }
 
 @media (min-width: 585px) {
