--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 header {
 
     background-image: url(../img/fondo.jpg);
-    background-size: 75vw;
+    background-size: 70vw;
 }
 
 .main-header {
@@ -43,8 +43,9 @@ header {
 
 .logo-2 {
 
-    width: 25vw;
-    width: 22vw;
+    width: 20vw;
+    height: 22vw;
+   
 }
 
 .nav-bar a {
@@ -509,6 +510,18 @@ li {
 
     }
 
+      .logo {
+
+        width: 10vw;
+    }
+
+    .logo-2 {
+
+        width: 10vw;
+        height: 9.7vw;
+    }
+
+
 
 
 
@@ -558,7 +571,7 @@ li {
 
     .contenedor-info {
 
-        text-shadow: 2px 2px 4px rgba(63, 76, 94, 0.8); 
+        
         padding: 10px;
     }
 
@@ -575,10 +588,11 @@ li {
     header {
 
 
-        background-size: 45vw;
+        background-size: 20vw;
 
     }
 
+  
 
 
 
@@ -599,8 +613,8 @@ li {
 
     .logo-2 {
 
-        width: 8vw;
-        height: auto;
+        width: 10vw;
+        height: 7.5vw;
     }
 
     .titular {
