--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 header {
 
     background-image: url(../img/fondo.jpg);
-    background-size: 70vw;
+    background-size: 74vw;
 }
 
 .main-header {
@@ -43,8 +43,9 @@ header {
 
 .logo-2 {
 
-    width: 20vw;
-    height: 22vw;
+    width: 30vw;
+    height: auto;
+    
    
 }
 
@@ -517,8 +518,8 @@ li {
 
     .logo-2 {
 
-        width: 10vw;
-        height: 9.7vw;
+        width: 12vw;
+        height:auto;
     }
 
 
@@ -588,7 +589,7 @@ li {
     header {
 
 
-        background-size: 20vw;
+        background-size: 22vw;
 
     }
 
@@ -614,7 +615,7 @@ li {
     .logo-2 {
 
         width: 10vw;
-        height: 7.5vw;
+        height: auto;
     }
 
     .titular {
@@ -649,7 +650,7 @@ li {
     header {
 
 
-        background-size: 15vw;
+        background-size: 18vw;
 
     }
 
